Fix: Remove orphaned icon on mobile for root breadcrumb

--- a/packages/vue-component-library/src/styles/default/_nav-breadcrumb.scss
+++ b/packages/vue-component-library/src/styles/default/_nav-breadcrumb.scss
@@ -59,14 +59,11 @@
             padding-left: calc(var(--unit-gutter) - 8px);
         }
 
-        .breadcrumb-wrapper:not(:last-of-type)::after {
-            content: unset;
-        }
-
-        .breadcrumb-wrapper:last-of-type::before {
+        .breadcrumb-wrapper :not(.current-page-title):last-of-type::before
+        {
             content: url('ucla-library-design-tokens/assets/svgs/icon-caret-left.svg');
             position: relative;
-            top: 5px;
+            top: 9px;
         }
 
         .current-page-title {
